--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,8 @@
     "build": "cd ../packages/graph-core && pnpm build && cd ../../frontend && tsc -b && vite build",
     "preview": "vite preview",
     "dev:full": "concurrently \"cd ../backend && source .venv/bin/activate && python main.py\" \"pnpm dev\"",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "test": "vitest",
+    "test:watch": "vitest --watch"
   },
   "dependencies": {
     "@dnd-kit/core": "6.3.1",
@@ -28,8 +28,9 @@
     "graphology-generators": "0.11.2",
     "graphology-types": "0.24.8",
     "mathjs": "14.6.0",
+    "picocolors": "1.1.1",
     "plotly": "1.0.6",
-    "plotly.js": "^2.27.0",
+    "plotly.js": "3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-grid-layout": "1.5.2",
@@ -44,7 +45,6 @@
     "zustand": "5.0.8"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.0",
     "@types/node": "^22.0.0",
     "@types/plotly.js": "^2.12.29",
     "@types/react": "^18.3.3",
@@ -52,15 +52,14 @@
     "@types/react-grid-layout": "1.3.5",
     "@types/three": "0.179.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "@vitest/ui": "3.2.4",
     "autoprefixer": "^10.4.20",
-    "concurrently": "9.2.0",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
+    "npm-run-all2": "8.0.4",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
-    "ts-jest": "^29.1.0",
     "typescript": "^5.5.3",
-    "vite": "^5.4.1"
+    "vite": "7.1.5",
+    "vitest": "3.2.4"
   },
   "packageManager": "pnpm@10.15.1+sha512.34e538c329b5553014ca8e8f4535997f96180a1d0f614339357449935350d924e22f8614682191264ec33d1462ac21561aff97f6bb18065351c162c7e8f6de67"
 }
