--- a/packages/graph-core/package.json
+++ b/packages/graph-core/package.json
@@ -23,7 +23,6 @@
     "papaparse": "5.5.3",
     "primereact": "10.9.6",
     "react-icons": "5.5.0",
-    "react-json-tree": "0.20.0",
     "react-markdown": "10.1.0",
     "redux-persist": "6.0.0",
     "rehype-mathjax": "7.1.0",
@@ -36,9 +35,9 @@
   "devDependencies": {
     "@types/lodash": "4.17.17",
     "@types/papaparse": "5.3.16",
-    "typescript": "^5.8.3",
+    "typescript": "5.9.2",
     "vite": "^6.0.0",
-    "vitest": "^1.0.0"
+    "vitest": "3.2.4"
   },
   "packageManager": "pnpm@10.14.0+sha512.ad27a79641b49c3e481a16a805baa71817a04bbe06a38d17e60e2eaee83f6a146c6a688125f5792e48dd5ba30e7da52a5cda4c3992b9ccf333f9ce223af84748"
 }
