--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "clean": "rm -rf node_modules dist"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@react-sigma/core": "5.0.4",
     "@spin-network/graph-core": "workspace:*",
     "ts-quantum": "workspace:*",
@@ -20,6 +22,7 @@
     "@tsparticles/react": "3.0.0",
     "@tsparticles/slim": "3.9.1",
     "buffer": "6.0.3",
+    "expr-eval": "^2.0.2",
     "gpu-io": "0.2.7",
     "graphology": "0.26.0",
     "mathjs": "14.6.0",
@@ -54,7 +57,7 @@
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.8.2",
-    "vite": "7.1.5",
+    "vite": "5.4.21",
     "vitest": "^0.34.6"
   },
   "packageManager": "pnpm@10.15.1+sha512.34e538c329b5553014ca8e8f4535997f96180a1d0f614339357449935350d924e22f8614682191264ec33d1462ac21561aff97f6bb18065351c162c7e8f6de67"
